--- a/app/src/main/res/layout/list_iteam_search_result.xml
+++ b/app/src/main/res/layout/list_iteam_search_result.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/tv_city"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constrainedHeight="true"
